Prevent long portlet titles from overflowing into content #60

--- a/uportal-war/src/main/webapp/media/skins/muniversality/wisc.edu-mobile/portal.css
+++ b/uportal-war/src/main/webapp/media/skins/muniversality/wisc.edu-mobile/portal.css
@@ -620,6 +620,8 @@ mathematical calculations. */
 }
 .up .secondary-titlebar h2.portlet-title {
   line-height: 40px;
+  height: 40px;
+  overflow: hidden;
   text-shadow: none;
   font-weight: bold;
   font-size: 16px;
