--- a/uportal-war/src/main/webapp/media/skins/muniversality/wisc.edu-mobile/scss/_theme.scss
+++ b/uportal-war/src/main/webapp/media/skins/muniversality/wisc.edu-mobile/scss/_theme.scss
@@ -66,6 +66,8 @@
         
         h2.portlet-title {
             line-height: 40px; // vertical centering
+            height: 40px;
+            overflow: hidden;
             text-shadow: none;
             font-weight: bold;
             font-size: 16px;
